--- a/index.html
+++ b/index.html
@@ -1250,42 +1250,33 @@
                             "slidesPerView": 6
                         }
                     }}'>
-                        <div class="swiper-wrapper">
+                        <div class="swiper-wrapper d-flex align-items-center">
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/ELSWEDY.png" alt="">
+                                <img src="assets/images/brand/zohor.jfif" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/ALKAN.png" alt="">
+                                <img src="assets/images/brand/jw.jfif" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/bet-kheprA.png" alt="">
+                                <img src="assets/images/brand/sonesta.jfif" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/BRITSH.png" alt="">
+                                <img src="assets/images/brand/ritz.jfif" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/LOREAL.png" alt="">
+                                <img src="assets/images/brand/ran.jfif" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/MASAR.png" alt="">
+                                <img src="assets/images/brand/atrium.jfif" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/MIT.png" alt="">
+                                <img src="assets/images/brand/townlab.jfif" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/MITSUBISHI.png" alt="">
+                                <img src="assets/images/brand/gleeds.jfif" alt="">
                             </div><!-- /.swiper-slide -->
                             <div class="swiper-slide">
-                                <img src="assets/images/brand/NEXT-CARE.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/RINA.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/GORMET.png" alt="">
-                            </div><!-- /.swiper-slide -->
-                            <div class="swiper-slide">
-                                <img src="assets/images/brand/DOF.png" alt="">
+                                <img src="assets/images/brand/kandil.jfif" alt="">
                             </div><!-- /.swiper-slide -->
                         </div>
                     </div>
