--- a/about.html
+++ b/about.html
@@ -1052,56 +1052,35 @@
                         }
                     }}'
             >
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/ELSWEDY.png" alt="" />
+                <div class="swiper-wrapper d-flex align-items-center">
+                    <div class="swiper-slide">
+                        <img src="assets/images/brand/zohor.jfif" alt="">
+                    </div><!-- /.swiper-slide -->
+                    <div class="swiper-slide">
+                        <img src="assets/images/brand/jw.jfif" alt="">
+                    </div><!-- /.swiper-slide -->
+                    <div class="swiper-slide">
+                        <img src="assets/images/brand/sonesta.jfif" alt="">
+                    </div><!-- /.swiper-slide -->
+                    <div class="swiper-slide">
+                        <img src="assets/images/brand/ritz.jfif" alt="">
+                    </div><!-- /.swiper-slide -->
+                    <div class="swiper-slide">
+                        <img src="assets/images/brand/ran.jfif" alt="">
+                    </div><!-- /.swiper-slide -->
+                    <div class="swiper-slide">
+                        <img src="assets/images/brand/atrium.jfif" alt="">
+                    </div><!-- /.swiper-slide -->
+                    <div class="swiper-slide">
+                        <img src="assets/images/brand/townlab.jfif" alt="">
+                    </div><!-- /.swiper-slide -->
+                    <div class="swiper-slide">
+                        <img src="assets/images/brand/gleeds.jfif" alt="">
+                    </div><!-- /.swiper-slide -->
+                    <div class="swiper-slide">
+                        <img src="assets/images/brand/kandil.jfif" alt="">
+                    </div><!-- /.swiper-slide -->
                 </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/ALKAN.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/bet-kheprA.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/BRITSH.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/LOREAL.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/MASAR.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/MIT.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/MITSUBISHI.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/NEXT-CARE.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/RINA.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/GORMET.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-                <div class="swiper-slide">
-                  <img src="assets/images/brand/DOF.png" alt="" />
-                </div>
-                <!-- /.swiper-slide -->
-              </div>
             </div>
           </div>
         </div>
