--- a/index.html
+++ b/index.html
@@ -377,6 +377,14 @@
                                                     <p>Human Resources Consultations</p>
                                                 </div>
                                             </li>
+                                            <li>
+                                                <div class="icon">
+                                                    <span class="icon-arrows"></span>
+                                                </div>
+                                                <div class="text">
+                                                    <p>Egyptian Federation for Construction Contractors</p>
+                                                </div>
+                                            </li>
                                         </ul>
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6">
@@ -394,7 +402,7 @@
                                                     <span class="icon-arrows"></span>
                                                 </div>
                                                 <div class="text">
-                                                    <p>Recruitment of Foreign Labor</p>
+                                                    <p>Termination of Foreign Work Permits</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -402,7 +410,7 @@
                                                     <span class="icon-arrows"></span>
                                                 </div>
                                                 <div class="text">
-                                                    <p>Persuasive Ideas for Growth</p>
+                                                    <p>Health Insurance (Green Cards)</p>
                                                 </div>
                                             </li>
                                         </ul>
@@ -411,13 +419,9 @@
                             </div>
                             <div class="about-two__content-title mt-4">
                                 <h3>
-                                    All previously mentioned Services are to be provided by a constellation of professional consultants all over the country.
+                                    We also provide comprehensive solutions to all problems that may face the company, executed by
+                                    a team of consultants and staff covering all regions of the republic.
                                 </h3>
-                            </div>
-                            <div class="about-two__content-text">
-                                <p>
-                                    They also provide all the solutions for all problems that could face your respectful company.
-                                </p>
                             </div>
                             <ul class="about-two__content-list list-unstyled">
                                 <li>
