--- a/index-ar.html
+++ b/index-ar.html
@@ -356,6 +356,14 @@
                                                     <p>استشارات الموارد البشرية</p>
                                                 </div>
                                             </li>
+                                            <li>
+                                                <div class="icon">
+                                                    <span class="icon-arrows"></span>
+                                                </div>
+                                                <div class="text">
+                                                    <p>الاتحاد المصرى لمقاولى التشييد والبناء</p>
+                                                </div>
+                                            </li>
                                         </ul>
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6">
@@ -365,7 +373,7 @@
                                                     <span class="icon-arrows"></span>
                                                 </div>
                                                 <div class="text">
-                                                    <p>وزارة القوى العاملة</p>
+                                                    <p>وزارة القوى العاملة ومكتب العمل</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -373,7 +381,7 @@
                                                     <span class="icon-arrows"></span>
                                                 </div>
                                                 <div class="text">
-                                                    <p>توظيف العمالة الأجنبية</p>
+                                                    <p>إنهاء تراخيص عمل الأجانب</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -381,7 +389,7 @@
                                                     <span class="icon-arrows"></span>
                                                 </div>
                                                 <div class="text">
-                                                    <p>أفكار مقنعة للنمو</p>
+                                                    <p>التأمين الصحي (البطاقات الخضراء)</p>
                                                 </div>
                                             </li>
                                         </ul>
@@ -390,13 +398,8 @@
                             </div>
                             <div class="about-two__content-title mt-4">
                                 <h3>
-                                    جميع خدماتنا تقدمها فرق عمل متخصصة في مجال الموارد البشرية، وتتمتع بخبرة واسعة في هذا المجال.
+                                    كما نقوم بتقديم كافة الحلول لكل المشاكل التي من الممكن أن تواجه الشركة والتنفيذ بواسطة كوكبة من الاستشاريين وفريق عمل يغطي جميع أنحاء الجمهورية.
                                 </h3>
-                            </div>
-                            <div class="about-two__content-text">
-                                <p>
-                                    كما أنها تقدم جميع الحلول لجميع المشكلات التي قد تواجه شركتكم المحترمة.
-                                </p>
                             </div>
                             <ul class="about-two__content-list list-unstyled">
                                 <li>
