--- a/about.html
+++ b/about.html
@@ -1052,35 +1052,44 @@
                         }
                     }}'
             >
-                <div class="swiper-wrapper d-flex align-items-center">
-                    <div class="swiper-slide">
-                        <img src="assets/images/brand/zohor.jfif" alt="">
-                    </div><!-- /.swiper-slide -->
-                    <div class="swiper-slide">
-                        <img src="assets/images/brand/jw.jfif" alt="">
-                    </div><!-- /.swiper-slide -->
-                    <div class="swiper-slide">
-                        <img src="assets/images/brand/sonesta.jfif" alt="">
-                    </div><!-- /.swiper-slide -->
-                    <div class="swiper-slide">
-                        <img src="assets/images/brand/ritz.jfif" alt="">
-                    </div><!-- /.swiper-slide -->
-                    <div class="swiper-slide">
-                        <img src="assets/images/brand/ran.jfif" alt="">
-                    </div><!-- /.swiper-slide -->
-                    <div class="swiper-slide">
-                        <img src="assets/images/brand/atrium.jfif" alt="">
-                    </div><!-- /.swiper-slide -->
-                    <div class="swiper-slide">
-                        <img src="assets/images/brand/townlab.jfif" alt="">
-                    </div><!-- /.swiper-slide -->
-                    <div class="swiper-slide">
-                        <img src="assets/images/brand/gleeds.jfif" alt="">
-                    </div><!-- /.swiper-slide -->
-                    <div class="swiper-slide">
-                        <img src="assets/images/brand/kandil.jfif" alt="">
-                    </div><!-- /.swiper-slide -->
+              <div class="swiper-wrapper d-flex align-items-center">
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/zohor.jfif" alt="" />
                 </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/jw.jfif" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/sonesta.jfif" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/ritz.jfif" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/ran.jfif" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/atrium.jfif" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/townlab.jfif" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/gleeds.jfif" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+                <div class="swiper-slide">
+                  <img src="assets/images/brand/kandil.jfif" alt="" />
+                </div>
+                <!-- /.swiper-slide -->
+              </div>
             </div>
           </div>
         </div>
@@ -1119,7 +1128,14 @@
                     </p>
                     <div class="footer-widget__emergency-call">
                       <p>Emergency</p>
-                      <a href="tel:+201013714343">+20 101 3714 343</a>
+                      <p class="d-flex align-items-center gap-3">
+                        <i class="fas fa-phone"></i
+                        ><a href="tel:+201013714343">+20 101 3714 343</a>
+                      </p>
+                      <p class="d-flex align-items-center gap-3">
+                        <i class="fas fa-headphones"></i
+                        ><a href="tel:0227510396">02 275 10 396</a>
+                      </p>
                     </div>
                   </div>
                 </div>
