--- a/contact.html
+++ b/contact.html
@@ -319,7 +319,7 @@
               <div class="contact-two__left">
                 <div class="contact-two__img">
                   <img
-                    src="assets/images/resources/contact-two-img-1.jpg"
+                    src="assets/images/gallery/contactus.png"
                     alt=""
                   />
                 </div>
@@ -397,7 +397,7 @@
                         <div class="contact-two__btn-box">
                           <button
                             type="submit"
-                            class="thm-btn contact-two__btn"
+                            class="thm-btn contact-two__btn rounded"
                           >
                             send message<span class="icon-right-arrow"></span>
                           </button>
