--- a/contact.html
+++ b/contact.html
@@ -265,7 +265,7 @@
               <!--Google Map Start-->
               <div class="google-map">
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4562.753041141002!2d-118.80123790098536!3d34.152323469614075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e82469c2162619%3A0xba03efb7998eef6d!2sCostco+Wholesale!5e0!3m2!1sbn!2sbd!4v1562518641290!5m2!1sbn!2sbd"
+                  src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3456.436448744726!2d31.25408937555081!3d29.966884574962723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjnCsDU4JzAwLjgiTiAzMcKwMTUnMjQuMCJF!5e0!3m2!1sen!2seg!4v1760612270495!5m2!1sen!2seg"
                   class="google-map__one"
                   allowfullscreen
                 ></iframe>
@@ -318,10 +318,7 @@
             <div class="col-xl-6 col-lg-6">
               <div class="contact-two__left">
                 <div class="contact-two__img">
-                  <img
-                    src="assets/images/gallery/contactus.png"
-                    alt=""
-                  />
+                  <img src="assets/images/gallery/contactus.png" alt="" />
                 </div>
               </div>
             </div>
